--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -34,6 +34,7 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="System"/>
+        <Reference Include="System.Configuration" />
         <Reference Include="System.Core"/>
         <Reference Include="System.Xml.Linq"/>
         <Reference Include="System.Data.DataSetExtensions"/>
@@ -63,6 +64,7 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <None Include="App.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -74,7 +76,10 @@
         </Compile>
     </ItemGroup>
     <ItemGroup>
-        <None Include="App.config"/>
+      <ProjectReference Include="..\Infraestructura\Infraestructura.csproj">
+        <Project>{218b0adf-0f7e-4719-b727-6103e60084e9}</Project>
+        <Name>Infraestructura</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
 </Project>
