--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -40,6 +40,9 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Articulo.cs" />
+        <Compile Include="Categoria.cs" />
+        <Compile Include="Imagen.cs" />
+        <Compile Include="Marca.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
