--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -39,7 +39,21 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ArticuloNegocio.cs" />
+        <Compile Include="ImagenNegocio.cs" />
+        <Compile Include="MarcaNegocio.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Properties\CategoriaNegocio.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Dominio\Dominio.csproj">
+        <Project>{87293c2e-c5a8-467c-b837-72b630198b61}</Project>
+        <Name>Dominio</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Infraestructura\Infraestructura.csproj">
+        <Project>{218b0adf-0f7e-4719-b727-6103e60084e9}</Project>
+        <Name>Infraestructura</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
