--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -55,6 +55,7 @@
         </Compile>
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Views\ArticuloView.cs" />
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,9 +77,17 @@
         </Compile>
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\Dominio\Dominio.csproj">
+        <Project>{87293c2e-c5a8-467c-b837-72b630198b61}</Project>
+        <Name>Dominio</Name>
+      </ProjectReference>
       <ProjectReference Include="..\Infraestructura\Infraestructura.csproj">
         <Project>{218b0adf-0f7e-4719-b727-6103e60084e9}</Project>
         <Name>Infraestructura</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Negocio\Negocio.csproj">
+        <Project>{40ecc4f1-1d8d-47dc-9688-ddb5ea9d9cd4}</Project>
+        <Name>Negocio</Name>
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
