--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -56,6 +56,12 @@
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="Views\ArticuloView.cs" />
+        <Compile Include="Views\Home.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Views\Home.Designer.cs">
+          <DependentUpon>Home.cs</DependentUpon>
+        </Compile>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
