--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -47,21 +47,21 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Listado.cs">
+        <Compile Include="Articulos.cs">
             <SubType>Form</SubType>
         </Compile>
-        <Compile Include="Listado.Designer.cs">
-            <DependentUpon>Listado.cs</DependentUpon>
+        <Compile Include="Articulos.Designer.cs">
+            <DependentUpon>Articulos.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Principal.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Principal.Designer.cs">
+          <DependentUpon>Principal.cs</DependentUpon>
         </Compile>
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="Views\ArticuloView.cs" />
-        <Compile Include="Views\Home.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="Views\Home.Designer.cs">
-          <DependentUpon>Home.cs</DependentUpon>
-        </Compile>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
