--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -47,11 +47,22 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Articulos.cs">
-            <SubType>Form</SubType>
+        <Compile Include="Abstactos\Listado.cs">
+          <SubType>UserControl</SubType>
         </Compile>
-        <Compile Include="Articulos.Designer.cs">
-            <DependentUpon>Articulos.cs</DependentUpon>
+        <Compile Include="Abstactos\Listado.Designer.cs">
+          <DependentUpon>Listado.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Articulos.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Categorias.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="DTO\CategoriaDto.cs" />
+        <Compile Include="DTO\MarcaDto.cs" />
+        <Compile Include="Marcas.cs">
+          <SubType>Form</SubType>
         </Compile>
         <Compile Include="Principal.cs">
           <SubType>Form</SubType>
@@ -59,9 +70,9 @@
         <Compile Include="Principal.Designer.cs">
           <DependentUpon>Principal.cs</DependentUpon>
         </Compile>
-        <Compile Include="Program.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="Views\ArticuloView.cs" />
+        <Compile Include="Program.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="DTO\ArticuloDto.cs" />
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
