--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -97,6 +97,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTO\ArticuloDto.cs" />
+    <Compile Include="VerArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VerArticulo.Designer.cs">
+      <DependentUpon>VerArticulo.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CrearArticulo.resx">
       <DependentUpon>CrearArticulo.cs</DependentUpon>
     </EmbeddedResource>
@@ -121,6 +127,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VerArticulo.resx">
+      <DependentUpon>VerArticulo.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
