--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -59,34 +59,28 @@
     <Compile Include="Categorias.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CrearArticulo.cs">
+    <Compile Include="CrearMarca.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CrearArticulo.Designer.cs">
-      <DependentUpon>CrearArticulo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CrearCategoria.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CrearCategoria.Designer.cs">
-      <DependentUpon>CrearCategoria.cs</DependentUpon>
+    <Compile Include="CrearMarca.Designer.cs">
+      <DependentUpon>CrearMarca.cs</DependentUpon>
     </Compile>
     <Compile Include="DTO\CategoriaDto.cs" />
     <Compile Include="DTO\MarcaDto.cs" />
-    <Compile Include="EliminarCategoria.cs">
+    <Compile Include="EditarMarca.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EliminarCategoria.Designer.cs">
-      <DependentUpon>EliminarCategoria.cs</DependentUpon>
+    <Compile Include="EditarMarca.Designer.cs">
+      <DependentUpon>EditarMarca.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EliminarMarca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EliminarMarca.Designer.cs">
+      <DependentUpon>EliminarMarca.cs</DependentUpon>
     </Compile>
     <Compile Include="Marcas.cs">
       <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="EditarCategoria.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="EditarCategoria.Designer.cs">
-      <DependentUpon>EditarCategoria.cs</DependentUpon>
     </Compile>
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
@@ -97,23 +91,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTO\ArticuloDto.cs" />
-    <Compile Include="VerArticulo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="VerArticulo.Designer.cs">
-      <DependentUpon>VerArticulo.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="CrearArticulo.resx">
-      <DependentUpon>CrearArticulo.cs</DependentUpon>
+    <EmbeddedResource Include="CrearMarca.resx">
+      <DependentUpon>CrearMarca.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CrearCategoria.resx">
-      <DependentUpon>CrearCategoria.cs</DependentUpon>
+    <EmbeddedResource Include="EditarMarca.resx">
+      <DependentUpon>EditarMarca.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EditarCategoria.resx">
-      <DependentUpon>EditarCategoria.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="EliminarCategoria.resx">
-      <DependentUpon>EliminarCategoria.cs</DependentUpon>
+    <EmbeddedResource Include="EliminarMarca.resx">
+      <DependentUpon>EliminarMarca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
@@ -127,9 +112,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="VerArticulo.resx">
-      <DependentUpon>VerArticulo.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
