Segundo aporte: logica de Editar y Eliminar Articulos

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -59,6 +59,18 @@
     <Compile Include="Categorias.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="CrearArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CrearArticulo.Designer.cs">
+      <DependentUpon>CrearArticulo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CrearCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CrearCategoria.Designer.cs">
+      <DependentUpon>CrearCategoria.cs</DependentUpon>
+    </Compile>
     <Compile Include="CrearMarca.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,11 +79,35 @@
     </Compile>
     <Compile Include="DTO\CategoriaDto.cs" />
     <Compile Include="DTO\MarcaDto.cs" />
+    <Compile Include="EditarArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarArticulo.Designer.cs">
+      <DependentUpon>EditarArticulo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditarCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarCategoria.Designer.cs">
+      <DependentUpon>EditarCategoria.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditarMarca.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="EditarMarca.Designer.cs">
       <DependentUpon>EditarMarca.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EliminarArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EliminarArticulo.Designer.cs">
+      <DependentUpon>EliminarArticulo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EliminarCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EliminarCategoria.Designer.cs">
+      <DependentUpon>EliminarCategoria.cs</DependentUpon>
     </Compile>
     <Compile Include="EliminarMarca.cs">
       <SubType>Form</SubType>
@@ -91,11 +127,35 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTO\ArticuloDto.cs" />
+    <Compile Include="VerArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VerArticulo.Designer.cs">
+      <DependentUpon>VerArticulo.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="CrearArticulo.resx">
+      <DependentUpon>CrearArticulo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CrearCategoria.resx">
+      <DependentUpon>CrearCategoria.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CrearMarca.resx">
       <DependentUpon>CrearMarca.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="EditarArticulo.resx">
+      <DependentUpon>EditarArticulo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditarCategoria.resx">
+      <DependentUpon>EditarCategoria.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditarMarca.resx">
       <DependentUpon>EditarMarca.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EliminarArticulo.resx">
+      <DependentUpon>EliminarArticulo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EliminarCategoria.resx">
+      <DependentUpon>EliminarCategoria.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EliminarMarca.resx">
       <DependentUpon>EliminarMarca.cs</DependentUpon>
@@ -112,6 +172,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VerArticulo.resx">
+      <DependentUpon>VerArticulo.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
