--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -59,9 +59,13 @@
     <Compile Include="Categorias.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CrearArticulo.cs" />
+    <Compile Include="CrearArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CrearArticulo.Designer.cs" />
-    <Compile Include="CrearCategoria.cs" />
+    <Compile Include="CrearCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CrearCategoria.Designer.cs" />
     <Compile Include="CrearMarca.cs">
       <SubType>Form</SubType>
@@ -71,9 +75,13 @@
     </Compile>
     <Compile Include="DTO\CategoriaDto.cs" />
     <Compile Include="DTO\MarcaDto.cs" />
-    <Compile Include="EditarArticulo.cs" />
+    <Compile Include="EditarArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="EditarArticulo.Designer.cs" />
-    <Compile Include="EditarCategoria.cs" />
+    <Compile Include="EditarCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="EditarCategoria.Designer.cs" />
     <Compile Include="EditarMarca.cs">
       <SubType>Form</SubType>
@@ -81,9 +89,13 @@
     <Compile Include="EditarMarca.Designer.cs">
       <DependentUpon>EditarMarca.cs</DependentUpon>
     </Compile>
-    <Compile Include="EliminarArticulo.cs" />
+    <Compile Include="EliminarArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="EliminarArticulo.Designer.cs" />
-    <Compile Include="EliminarCategoria.cs" />
+    <Compile Include="EliminarCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="EliminarCategoria.Designer.cs" />
     <Compile Include="EliminarMarca.cs">
       <SubType>Form</SubType>
@@ -109,7 +121,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTO\ArticuloDto.cs" />
-    <Compile Include="VerArticulo.cs" />
+    <Compile Include="VerArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="VerArticulo.Designer.cs" />
     <EmbeddedResource Include="CrearArticulo.resx" />
     <EmbeddedResource Include="CrearCategoria.resx" />
